--- a/exercises/calculator/calc.css
+++ b/exercises/calculator/calc.css
@@ -1,3 +1,10 @@
 body {
-  background-color: aliceblue;
+  text-align: center;
+  background: rgb(176,238,174);
+background: radial-gradient(circle, rgba(176,238,174,1) 0%, rgba(233,221,148,1) 100%);
+}
+
+.result {
+  font-style: italic;
+  font-size: 100px;
 }
