--- a/exercises/businessTime/businessTime.css
+++ b/exercises/businessTime/businessTime.css
@@ -57,13 +57,13 @@ a:hover {
   
 
 
-  background: rgb(180,175,58);
+  /* background: rgb(180,175,58);
   background: linear-gradient(187deg, rgba(180,175,58,0.6643032212885154) 0%, rgba(29,253,224,0.8267682072829132) 50%, rgba(69,252,247,0.7595413165266106) 100%);
 
 
   border: 14px ridge rgba(28,110,164,0.77);
   border-radius: 0px 40px 0px 40px;
-  box-shadow: 12px 17px 15px 6px rgba(0,0,0,0.75);
+  box-shadow: 12px 17px 15px 6px rgba(0,0,0,0.75); */
 }
 
 .break {
@@ -111,7 +111,7 @@ img {
 @media only screen and (max-width: 650px) {
 
   #travel-link{
-    font-size: 10px
+    font-size: 10px;
     margin-bottom: 10%;
   }
 
