--- a/zen/zen.css
+++ b/zen/zen.css
@@ -1,97 +1,104 @@
-
-
-.container > {
-  display: flex;
+.container {
+  display: -ms-grid;
   display: grid;
-  grid-gap: 0.1%;
-  grid-template-columns: repeat(8, auto);
-  grid-template-rows: repeat(8, auto);
-  flex-wrap: wrap;
-  overflow: hidden;
-  background-color: #3A6662;
-  height: 150vh;
-  width: 100vw;
+  -ms-grid-columns: 2fr 1fr;
+      grid-template-columns: 2fr 1fr;
+  -ms-grid-rows: (1fr)[5];
+      grid-template-rows: repeat(5, 1fr);
+  grid-gap: 2px;
+  height: 200vh;
+  width: 100%;
 }
+
 .box1 {
-  
-  height: 99%;
   width: 100%;
-  margin: 1px;  background-color: aliceblue;
-  grid-column: 1 /  6;
-
+  background-color: #548076;
 }
+
+.box1 .header {
+  background-color: #FFFFFF;
+}
+
 .box2 {
-  grid-column: 6 / -1;
-  height: 99%;
   width: 100%;
-  margin: 1px;
-  background-color: rgb(171, 209, 243);
+  background-color: #548076;
 }
-.box3 {
-  grid-row: 2 / 5;
-  grid-column: 1 / 5;
-  height: 99%;
-  width: 100%;
-  margin: 1px;
-  background-color: rgb(223, 201, 248);
-}
-.box4 {
-  
-  height: 99%;
-  width: 100%;
-  margin: 1px;
-  background-color: aliceblue;
-}
-.box5 {
-  
-  height: 99%;
-  width: 100%;
-  margin: 1px;
-  background-color: rgb(171, 209, 243);
-}
-.box6 {
-  
-  height: 99%;
-  width: 100%;
-  margin: 1px;
-  background-color: rgb(223, 201, 248);
-}
-.box7 {
-  
-  height: 99%;
-  width: 100%;
-  margin: 1px;
-  background-color: aliceblue;
-}
-.box8 {
-  
-  height: 99%;
-  width: 100%;
-  margin: 1px;
-  background-color: rgb(171, 209, 243);
-}
-.box9 {
-  height: 99%;
-  width: 100%;
-  margin: 1px;
-  background-color: rgb(223, 201, 248);
-  opacity: 100%;
-  grid-column: 1 /  -1;
-}
-.box10 {
-  
-  height: 99%;
-  width: 100%;
-  margin: 1px;
-  background-color: #124346;
 
-  grid-column: 1 /  -1;
+.box2 .view-it {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: inherit;
+  text-align: center;
+}
+
+.box2 .view-it .view-designs {
+  height: 70px;
+  width: 280px;
+  border: 1px solid black;
+  background-color: white;
+  opacity: 0.5;
+}
+
+.box2 .view-it .arrow-view-designs {
+  height: 70px;
+  width: 70px;
+  font-size: 1.7em;
+  border: 1px solid black;
+  background-color: white;
+  opacity: 90%;
+}
+
+.box3 {
+  width: 100%;
+  background-color: #FFFFFF;
+}
+
+.box4 {
+  width: 100%;
+  background-color: #E6EDE8;
+}
+
+.box5 {
+  width: 100%;
+  background-color: #C6DED0;
+}
+
+.box6 {
+  width: 100%;
+  background-color: #B5D1C0;
+}
+
+.box7 {
+  width: 100%;
+  background-color: #ffffff;
+}
+
+.box8 {
+  width: 100%;
+  background-color: #E6EDE8;
+}
+
+.box9 {
+  width: 100%;
+  background-color: #548076;
+  opacity: 100%;
+  grid-column: 1 / -1;
+}
+
+.box10 {
+  width: 100%;
+  grid-column: 1 / -1;
+  background-color: #124346;
 }
 
 @media only screen and (max-width: 600px) {
- 
   .container {
-    
-    grid-template-columns: 1fr 
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
   }
 }
+/*# sourceMappingURL=zen.css.map */
